# treeport

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: agents.md  api.md  architecture.md  cli.md  contributing.md  getting-started.md  hooks.md  index.md  prompts.md
docs/recipes/: custom-agent.md  fix-github-issues.md  parallel-agents.md  sequential-review.md
src/treeport/: __init__.py  cli.py  core.py  docker_runner.py  file_collector.py  git_manager.py  logging.py  prompt.py  types.py
src/treeport/agents/: __init__.py  aider.py  base.py  claude_code.py  custom.py  gemini_agent.py  openai_agent.py  registry.py
tests/: conftest.py  test_agents.py  test_prompt.py  test_types.py
