[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "treeport"
version = "0.1.0"
description = "Orchestrate sandboxed AI coding agents in Python with treeport.run()"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "agents", "docker", "claude", "coding-agent", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "pydantic>=2.0",
    "docker>=7.0",
    "gitpython>=3.1",
    "typer>=0.12",
    "rich>=13.0",
    "anyio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
    "hatch>=1.12",
]

[project.scripts]
treeport = "treeport.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/treeport"
Repository = "https://github.com/yourusername/treeport"
Issues = "https://github.com/yourusername/treeport/issues"

# ── Hatch ──────────────────────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["src/treeport"]

[tool.hatch.envs.default]
dependencies = ["treeport[dev]"]

[tool.hatch.envs.default.scripts]
test = "pytest tests/ -v"
lint = "ruff check src/ tests/"
typecheck = "mypy src/treeport"

# ── Ruff ───────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ── Mypy ───────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# ── Pytest ─────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
